pkcs11: Unreference partner private key correctly

* Fixes a critical and crash on seahorse exit

https://bugzilla.gnome.org/show_bug.cgi?id=687972